# shraiwi.mini-qoi

./: .gitignore  CMakeLists.txt
examples/cmdline_decoder/: mqoi_decoder.c
